--- a/index.html
+++ b/index.html
@@ -265,12 +265,13 @@
             
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Courses</h3>
-              <div class="subheading mb-3">Oracle SQL - 18c performance tuning 
+              <div>
+                <div class="subheading mb-3">Oracle SQL - 18c performance tuning</div>
                 <div class="resume-date text-md-right">
                   <span class="text-primary">October 2019</span>
                 </div>
               </div>
-              <div class="subheading mb-3">Oracle PL/SQL - 18c advanced programming </div>
+              <div class="subheading mb-3">Oracle PL/SQL - 18c advanced programming</div>
             </div>
 
         </div>
