--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Poppins:400,400i,500,700,700i&amp;subset=latin-ext" rel="stylesheet">
 <link rel="stylesheet" href="./mini-dark.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.0.4/fuse.min.js"></script>
-<title>dominik wisniewski/title>
+<title>dominik wisniewski</title>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
