--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
   
 <head>
 <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Poppins:400,400i,500,700,700i&amp;subset=latin-ext" rel="stylesheet">
-<link rel="stylesheet" href="vendor/mini/mini-dark.min.css">
+<link rel="stylesheet" href="/vendor/mini/mini-dark.min.css">
   
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.0.4/fuse.min.js"></script>
 <title>dominik wisniewski</title>
