--- a/main.html
+++ b/main.html
@@ -21,6 +21,20 @@
       <span>&nbsp;text2</span></a>
       <label for="doc-drawer-checkbox" class="button drawer-toggle col-sm"></label>
     </header>
+    
+    
+    <nav class="col-md-4 col-lg-3" id="nav-drawer">
+    <h3>Menu</h3>
+    <label for="doc-drawer-checkbox" class="button drawer-close"></label>
+    <a href="#about" id="link-to-about">About</a>
+    <a href="#experience" id="link-to-experience">Experience</a>
+    <a href="#education" id="link-to-education">Education</a>
+    <a href="#skills" id="link-to-skills">Skills</a>
+    <a href="#lists" id="link-to-lists">Certificates &amp; & courses</a>
+    <a href="#hobby" id="link-to-interests">Interests</a>
+    </nav>
+    <main>
+    </main>
   </div>
 </body>
 </html>
