--- a/main.html
+++ b/main.html
@@ -49,17 +49,16 @@
       <div id="experience" class="card fluid">
       <h2 class="section double-padded">Experience</h2>
       <div class="section"><p>
-         Development and maintenance of OLTP system for payment cards issuance, management and transaction processing.
-Technical responsibilites:
-    <ul>
-      <li>PL/SQL development (new transactional modules, API, reporting)</li>
-      <li>query and process optimization</li>
-      <li>integration with other applications via Oracle Service Bus</li>
-      <li>frontend development - Apache server with mod pl/sql (basic html/css + javascript)</li>
-      <li>minor Java development</li>
-    </ul>
-
-Used tools: SQL Developer, TOAD, Oracle APEX, Eclipse, GIT, SoapUI, jMeter 
+        <p>Development and maintenance of OLTP system for payment cards issuance, management and transaction processing.</p>
+        <p>Technical responsibilites:</p>
+        <ul>
+          <li>PL/SQL development (new transactional modules, API, reporting)</li>
+          <li>query and process optimization</li>
+          <li>integration with other applications via Oracle Service Bus</li>
+          <li>frontend development - Apache server with mod pl/sql (basic html/css + javascript)</li>
+          <li>minor Java development</li>
+        </ul>
+        <p>Used tools: SQL Developer, TOAD, Oracle APEX, Eclipse, GIT, SoapUI, jMeter</p>
       </p></div>
       </div>
     </main>
