--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
       <a class="button col-sm col-md" href="">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="height: 20px; vertical-align: text-top;"><path d="M20 14.66V20a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h5.34"></path><polygon points="18 2 22 6 12 16 8 16 8 12 18 2"></polygon></svg>
       <span>&nbsp;text2</span></a>
-      <label for="doc-drawer-checkbox" class="button drawer-toggle col-sm"></label>
+      <label for="doc-drawer-checkbox" class="button drawer-toggle col-sm">::before</label>
     </header>
     
     <div id="wrapper" class="row">
