--- a/main.html
+++ b/main.html
@@ -30,10 +30,10 @@
       <label for="doc-drawer-checkbox" class="button drawer-toggle col-sm"></label>
     </header>
     
-    <div id="wrapper" class="row">
+    <div id="doc-wrapper" class="row">
     <input id="doc-drawer-checkbox" class="drawer" value="on" type="checkbox">
-    <nav class="col-md-4 col-lg-2" id="nav-drawer">
-      <h4>menu</h4>
+    <nav class="col-md-4 col-lg-3" id="nav-drawer">
+    <h4>menu</h4>
     <label for="doc-drawer-checkbox" class="button drawer-close"></label>
     <img class="circular" src="img/logo.jpg" alt="">
       <h3><a href="#about" id="link-to-about">About</a></h3>
