--- a/main.html
+++ b/main.html
@@ -31,12 +31,12 @@
     <nav class="col-md-4 col-lg-2" id="nav-drawer">
     <label for="doc-drawer-checkbox" class="button drawer-close"></label>
     <img class="circular" src="img/logo.jpg" alt="">
-      <h3><a href="#about" id="link-to-about">About</a></h3>
-      <h3><a href="#experience" id="link-to-experience">Experience</a></h3>
-      <h3><a href="#education" id="link-to-education">Education</a></h3>
-      <h3><a href="#skills" id="link-to-skills">Skills</a></h3>
-      <h3><a href="#lists" id="link-to-lists">Certificates &amp; courses</a></h3>
-      <h3><a href="#hobby" id="link-to-interests">Interests</a></h3>
+      <a href="#about" id="link-to-about">About</a>
+      <a href="#experience" id="link-to-experience">Experience</a>
+      <a href="#education" id="link-to-education">Education</a>
+      <a href="#skills" id="link-to-skills">Skills</a>
+      <a href="#lists" id="link-to-lists">Certificates &amp; courses</a>
+      <a href="#hobby" id="link-to-interests">Interests</a>
     </nav>
     <main class="col-sm-12 col-md-8 col-lg-9" id="doc-content">
       <div id="about" class="card fluid">
