--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
     <main class="col-sm-12 col-md-8 col-lg-9" id="doc-content">
       <div id="about" class="card fluid">
         <h2 class="section double-padded">About</h2>
-        <div class="section"
+        <div class="section">
       <p>Hi, I'm a guy who develops database software. 
         Somewhere during my mid 20's I got interested in software and decided to give it a go and try database "stuff". 
         Seems that it worked out and I became a professional developer - I keep learning and created this page to keep an up to date resume</p>
@@ -104,7 +104,17 @@
         </div>
       </div>
     </div>  
-        
+  
+       <div id="education" class="card fluid">
+        <h2 class="section double-padded">Education</h2>
+        <div class="section">
+      <p>
+Polish-Japanese Academy of Information Technology
+Post graduate: Information systems, applications and databases
+</p>
+      </div>
+    </div> 
+       
       </div>
     </main>
     </div>
