--- a/main.html
+++ b/main.html
@@ -113,7 +113,20 @@
           <p>2011/09-2013/06 Warsaw School of Economics.  Master degree: Law & Economics</p>
       </div>
     </div> 
-       
+ 
+     <div id="education" class="card fluid">
+        <h2 class="section double-padded">Skills</h2>
+      <div class="section">
+        <div class="row">
+          <div class="card small"></div>
+          <div class="card large"></div>
+          <div class="col-sm-12">
+            <div class="card fluid"></div>
+          </div>
+        </div>
+      </div>
+    </div> 
+        
       </div>
     </main>
     </div>
