--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
     </header>
     <div id="doc-wrapper" class="row">
     <input id="doc-drawer-checkbox" class="drawer" value="on" type="checkbox">
-    <nav class="col-md-4 col-lg-2" id="nav-drawer">
+    <nav class="col-md-4 col-lg-2 sticky" id="nav-drawer">
     <label for="doc-drawer-checkbox" class="button drawer-close"></label>
     <img class="circular" src="img/logo.jpg" alt="">
       <a href="#about" id="link-to-about">About</a>
