--- a/main.html
+++ b/main.html
@@ -156,8 +156,8 @@
     <div id="education" class="card fluid">
         <h2 class="section double-padded">Certificates</h2>
       <div class="section">
-        <img src="img/OCA_PLSQL_Badge.png" alt="">
-        <img src="img/OCA_SQL_Badge.png" alt="">
+        <img src="img/OCA_PLSQL_Badge_small.png" alt="">
+        <img src="img/OCA_SQL_Badge_small.png" alt="">
 
       </div>
     </div>
