--- a/main.html
+++ b/main.html
@@ -116,7 +116,7 @@
       </div>
     </div>
  
-     <div id="education" class="card fluid">
+     <div id="skills" class="card fluid">
         <h2 class="section double-padded">Skills</h2>
       <div class="section">
         <div class="row">
