--- a/main.html
+++ b/main.html
@@ -19,8 +19,9 @@
 </head>
 <body>
   <div>
-    <header class="row sticky">
-      <span class="logo col-sm-3 col-md">dominik wiśniewski</span>
+    <header class="row">
+      <span class="logo col-sm-3 col-md"><a href="mailto:wisniewski.dominik@protonmail.com">Dominik Wiśniewski</a></span>
+      
       <label for="doc-drawer-checkbox" class="button drawer-toggle col-sm"></label>
     </header>
     <div id="doc-wrapper" class="row">
