--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
     <input id="doc-drawer-checkbox" class="drawer" value="on" type="checkbox">
     <nav class="col-md-4 col-lg-2 sticky" id="nav-drawer">
     <label for="doc-drawer-checkbox" class="button drawer-close"></label>
-    <img class="circular" src="img/logo.jpg" alt="">
+    <!--<img class="circular" src="img/logo.jpg" alt="">-->
       <a href="#about" id="link-to-about">About</a>
       <a href="#experience" id="link-to-experience">Experience</a>
       <a href="#education" id="link-to-education">Education</a>
